--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inicia Sesion"
+            android:text="@string/inicia_sesion"
             android:textColor="@color/white"
             android:textSize="40sp"
             android:layout_marginTop="50dp"
@@ -26,13 +26,14 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            android:src="@drawable/icon_login_circulo"/>
+            android:src="@drawable/icon_login_circulo"
+            android:contentDescription="@null"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¿No tienes una cuenta? Registrate"
-            android:textSize="18dp"
+            android:text="@string/resgistrate"
+            android:textSize="18sp"
             android:textColor="@color/white"
             android:layout_marginTop="8dp"
             android:layout_gravity="center"/>
@@ -41,8 +42,9 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:hint="Ingrese su usuario"
-            android:textColor="@color/black"
+            android:hint="@string/ingrese_su_usuario"
+            android:autofillHints="username"
+            android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp"
             android:background="@drawable/rectangulo_ingrese_texto"
@@ -55,7 +57,8 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Ingrese su contraseña"
+            android:hint="@string/ingrese_su_contraseña"
+            android:autofillHints="password"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp"
@@ -66,22 +69,22 @@
             android:layout_gravity="center"/>
         
         <Button
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:text="Iniciar Sesion"
+            android:text="@string/iniciar_sesion"
             android:backgroundTint="@color/white"
-            android:textColor="#E00000"
+            android:textColor="#D35400"
             android:padding="18dp"
             android:layout_marginTop="32dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:id="@+id/iniciar_sesion_btn"
             android:layout_gravity="center"/>
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¡Accede desde tu cuenta!"
-            android:textSize="18dp"
+            android:text="@string/accede_desde_tu_cuenta"
+            android:textSize="18sp"
             android:textColor="@color/white"
             android:layout_marginTop="32dp"
             android:layout_gravity="center"/>
@@ -98,13 +101,15 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_margin="16dp"
-                android:src="@drawable/facebook"/>
+                android:src="@drawable/facebook"
+                android:contentDescription="@null"/>
 
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_margin="16dp"
-                android:src="@drawable/google"/>
+                android:src="@drawable/google"
+                android:contentDescription="@null"/>
 
         </LinearLayout>
 
@@ -114,4 +119,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
